test/Fail/Issue2170-unify.err
Issue2170-unify.agda:19.39-45: error: [UnequalTypes]
The function type
  .(unsquash₁ : _A_14) → Squash _A_14
is not a subtype of
  A → Squash A
because:
  one has irrelevant domain, while the other is relevant.
when checking that the expression squash has type A → Squash A
